# movie-games

./: CLAUDE.md  README.md  REQUIREMENTS.md  REQUIREMENT_CHANGES.md  deploy.sh  package.json  response.json
.claude/: settings.json
.claude/agents/: Composer.md  VFX.md  art-department.md  boom-operator.md  cinematographer.md  director.md  editor.md  gaffer.md  producer.md  screenwriter.md  supervising-producer.md
front/: biome.json  index.html  package.json  pnpm-lock.yaml  server-deploy.sh  tailwind.config.js  vite.config.ts
front/src/: App.vue  api.ts  main.ts  style.css
front/src/components/: CustomNode.vue  Designer.vue  Ending.vue  Game.refresh.test.ts  Game.vue  Generating.vue  Home.vue  Play.vue  PlotTree.vue  Records.vue
front/src/components/ui/: CharacterAvatar.test.ts  CharacterAvatar.vue  (+4 more)
front/src/data/: randomThemes.ts
front/src/hooks/: useGameState.ts
front/src/lib/: utils.ts
front/src/router/: index.ts
front/src/types/: movie.ts
front/src/utils/: image.ts
ops/: restart-backend.sh
prompts/: WORKFLOW.md  requirement.md
prompts/types/: movie.ts
server/: .gitignore  Cargo.toml
server/migrations/: 20240523000000_init.sql  20241222000000_add_user_agent.sql  20241231000000_add_shared_and_records.sql  20260101000000_add_shared_records.sql  20260101000001_add_template_source_to_glm_requests.sql
server/src/: api_types.rs  app.rs  db.rs  glm.rs  handlers.rs  images.rs  init.sql  main.rs  prompt.rs  sensitive.rs  template.rs  tests_repro.rs  tests_repro_sensitive.rs  tests_repro_sensitive_v2.rs  tests_sensitive.rs  types.rs
(+8 files in other folders)
