[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
base64 = "0.22.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
url = "2.5"
sensitive-rs = "0.5.0"
